<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Shared Preferences -->
    <string name="shared_preferences_name">com.bearden.powertool</string>
    <string name="shared_preferences_decider_num_yes">shared_preferences_decider_num_yes</string>
    <string name="shared_preferences_decider_num_no">shared_preferences_decider_num_no</string>

    <!-- Titles -->
    <string name="decider_header"><b>Bearden Decider For the Most Modern of Men</b></string>

    <!-- Overall -->
    <string name="app_name">Bearden Power Tool</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Bearden\'s All Purpose Multi Power Tool for coping with the housing market crisis</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="not_applicable">Not Applicable</string>
    <string name="press_button">Press<br />button</string>
    <string name="testing">TEST TEST TEST TEST TEST</string>
    <string name="delete">Delete</string>

    <!-- Overall titles -->
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_tally">Tally: </string>
    <string name="label_totals">Totals: </string>

    <!-- Main Menu Button Names -->
    <string name="number_converter">Number Converter</string>
    <string name="reg_calc">A normal calculator</string>
    <string name="ip_calc">A calculator for IP</string>
    <string name="colour_picker">Colour Picker</string>
    <string name="note_pad">Note Pad</string>
    <string name="rand_decider">Decider for Modern Man</string>

    <!-- Number Buttons -->
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_.">.</string>

    <!-- Calculator Functions -->
    <string name="_divide">/</string>
    <string name="_multiply">*</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_equals">=</string>
    <string name="_clear">C</string>

    <!-- Calculator Modes -->
    <string name="binary">Binary</string>
    <string name="decimal">Decimal</string>

    <!-- Calculator User Information -->
    <string name="divide_by_0">Divided by 0, values restored</string>
    <string name="long_number_input">Yes, this is possible but it\'s getting silly now</string>
    <string name="title_activity_number_converter">NumberConverterActivity</string>
    <string name="does_not_exist">Value not applicable</string>
    <string name="do_something_please">Do something. Please</string>

    <!-- Converter Functions -->
    <string name="do_conversion">Convert!</string>

    <!-- Converter Labels -->
    <string name="submitted_value">Submitted Value:</string>
    <string name="ascii">ASCII:</string>
    <string name="UTF8">UTF-8:</string>
    <string name="binary_value">Binary Value:</string>
    <string name="decimal_value">Decimal:</string>
    <string name="hex_value">Hexadecimal:</string>
    <string name="title_activity_decider">DeciderActivity</string>

    <!-- Decider Labels -->
    <string name="should_i_do_it">Should I do it?</string>
    <string name="decider_yes">Oui</string>
    <string name="decider_no">Non</string>
    <string name="start_number">Start Number</string>
    <string name="end_number">End Number</string>
    <string name="start_randomization">Randomize!</string>
    <string name="answer_goes_here">Answer Goes Here!</string>

    <!-- Decider User Information -->
    <string name="missing_number">Please enter two numbers (Reasonably smaller than 2,147,483,647 as well, thank you very much)</string>
    <string name="bad_interval">First number should be lower than the second</string>
    <string name="title_activity_ip">IPActivity</string>
    <string name="title_activity_colour_picker">ColourPickerActivity</string>
    <string name="title_activity_note_pad">NotePadActivity</string>
    
    <!-- IP helper Labels -->
    <string name="ip">IP</string>
    <string name="prefix">Prefix</string>
    <string name="slash">/</string>
    <string name="dot">.</string>
    <string name="btn_txt_start_ip_check">Start IP check</string>
    <string name="aaa">aaaaag</string>
    <string name="lbl_construct_subnets">Construct subnet recommendation</string>

</resources>
