<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".CalculatorActivity" >
    
    <TextView
        android:id="@+id/temp_number_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:paddingTop="2dp"
		android:paddingBottom="2dp"
		android:paddingLeft="2dp"
		android:paddingRight="2dp"
		android:textSize="15sp"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/number_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:paddingLeft="2dp"
		android:paddingRight="2dp"
		android:textSize="25sp"
        android:text="@string/hello_world"
        android:background="@drawable/back" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        
       	<Button
       	    android:id="@+id/num_button_7"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="numButton"
	        android:text="@string/_7"
	        android:background="@drawable/button_back"/>
       	
       	<Button
       	    android:id="@+id/num_button_8"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="numButton"
	        android:text="@string/_8"
	        android:background="@drawable/button_back"/>
       	
       	<Button
       	    android:id="@+id/num_button_9"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="numButton"
	        android:text="@string/_9"
	        android:background="@drawable/button_back"/>
       	
        <Button
       	    android:id="@+id/command_button_divide"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="commandButton"
	        android:text="@string/_divide"
	        android:background="@drawable/button_back"/>
       	
    </LinearLayout>
    
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        
       	<Button
       	    android:id="@+id/num_button_4"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="numButton"
	        android:text="@string/_4"
	        android:background="@drawable/button_back"/>
       	
       	<Button
       	    android:id="@+id/num_button_5"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="numButton"
	        android:text="@string/_5"
	        android:background="@drawable/button_back"/>
       	
       	<Button
       	    android:id="@+id/num_button_6"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="numButton"
	        android:text="@string/_6"
	        android:background="@drawable/button_back"/>
       	
       	<Button
       	    android:id="@+id/command_button_multiply"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="commandButton"
	        android:text="@string/_multiply"
	        android:background="@drawable/button_back"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        
       	<Button
       	    android:id="@+id/num_button_1"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="numButton"
	        android:text="@string/_1"
	        android:background="@drawable/button_back"/>
       	
       	<Button
       	    android:id="@+id/num_button_2"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="numButton"
	        android:text="@string/_2"
	        android:background="@drawable/button_back"/>
       	
       	<Button
       	    android:id="@+id/num_button_3"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="numButton"
	        android:text="@string/_3"
	        android:background="@drawable/button_back"/>
       	
       	<Button
       	    android:id="@+id/command_button_plus"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="commandButton"
	        android:text="@string/_plus"
	        android:background="@drawable/button_back"/>
       	
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        
       	<Button
       	    android:id="@+id/num_button_0"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:onClick="numButton"
	        android:text="@string/_0"
	        android:background="@drawable/button_back"/>
       	
       	<Button
       	    android:id="@+id/num_button_comma"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="numButton"
	        android:text="@string/_."
	        android:background="@drawable/button_back"/>
       	
       	<Button
       	    android:id="@+id/command_button_minus"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="commandButton"
	        android:text="@string/_minus"
	        android:background="@drawable/button_back"/>
       	 	
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        
       	<Button
       	    android:id="@+id/command_button_equals"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:onClick="equalsCommand"
	        android:text="@string/_equals"
	        android:background="@drawable/button_back"/>
       	
       	
       	<Button
       	    android:id="@+id/command_button_clear"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="clear"
	        android:text="@string/_clear"
	        android:background="@drawable/button_back"/>
       	 	
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        
       	<Button
       	    android:id="@+id/binary_mode"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:onClick="changeMode"
	        android:text="@string/binary"
	        android:background="@drawable/button_back"/>
       	
       	
       	<Button
       	    android:id="@+id/decimal_mode"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="changeMode"
	        android:text="@string/decimal"
	        android:background="@drawable/button_back"/>
       	 	
    </LinearLayout>

</LinearLayout>
