<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DeciderActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decider_header"
        android:textSize="15sp" />
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="5dp"
	    android:background="@color/stroke"
	    android:layout_marginBottom="5dp"/>
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:background="@color/heading"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
	    android:layout_height="55dp" 
        android:orientation="horizontal">
    
    <Button
      	android:id="@+id/decider_yes_no_button"
        android:layout_width="0dip"
        android:layout_height="50dp"
        android:layout_weight="1"

        android:text="@string/should_i_do_it"
        android:background="@drawable/button_back"/>
       	
    <TextView
        android:id="@+id/decider_yes_no_answer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:textSize="20sp" 
        android:hint="@string/press_button"
        android:background="@drawable/textview_back"/>
    
    </LinearLayout>
    
    <TextView
        android:id="@+id/decider_yes_no_tally"
        android:text="@string/label_tally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" />
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:background="@color/heading"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decider_header"
        android:textSize="15sp" />
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:background="@color/heading"
	    android:layout_marginTop="15dp"/>
    
    
     
    
</LinearLayout>
