<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".IPActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="5dp"
	    android:background="@color/stroke"
	    android:layout_marginBottom="5dp"/>
      
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
	    android:layout_height="55dp" 
        android:orientation="horizontal">
        
    <include 
        layout="@layout/layout_imports_ip"
        android:id="@+id/txt_ip_byte_1" />
    
        <!--  Should be like this, testing
        	layout imports to see if it works
    <EditText 
        android:id="@+id/txt_ip_byte_1"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:maxLength="3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="4"
        android:gravity="center"
        android:hint="@string/ip"
        android:background="@drawable/textview_back"/> -->

    <View
	    android:layout_width="0dp"
	    android:layout_height="0dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp" />
    
	<EditText 
        android:id="@+id/txt_ip_byte_2"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:maxLength="3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="4"
        android:gravity="center"
        android:hint="@string/ip"
        android:background="@drawable/textview_back"/>
	

    <View
	    android:layout_width="0dp"
	    android:layout_height="0dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp" />
	
	<EditText 
        android:id="@+id/txt_ip_byte_3"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:maxLength="3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="4"
        android:gravity="center"
        android:hint="@string/ip"
        android:background="@drawable/textview_back"/>
            
	<View
	    android:layout_width="0dp"
	    android:layout_height="0dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp" />
            
	<EditText 
        android:id="@+id/txt_ip_byte_4"
        android:inputType="number"
        android:imeOptions="actionGo"
        android:maxLength="3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="4"
        android:gravity="center"
        android:hint="@string/ip"
        android:background="@drawable/textview_back"/>
    
    </LinearLayout>
    
    <Button 
        android:id="@+id/btn_send_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_start_ip_check"
        android:background="@drawable/button_back"
        android:onClick="ipConvert"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginLeft="15dp" />
     
</LinearLayout>
